--- a/listings/Gemfile
+++ b/listings/Gemfile
@@ -33,7 +33,7 @@ gem 'autoprefixer-rails'
 # JAG END
 
 # Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+gem 'bcrypt', '~> 3.1.7'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
